--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,21 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_activity = '1.5.0'
+        compose_version = '1.1.1'
+        compose_navigation = '2.5.0'
+        compose_coil = '2.1.0'
+        core_splash_screen = '1.0.0-rc01'
+
+        lifecycle_runtime = '2.5.0'
+
+        /** My Library */
+        wolf_skeleton = '1.0.3v'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'com.android.application' version '7.1.2' apply false
+    id 'com.android.library' version '7.1.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
