--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,9 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui:1.1.1"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
+    implementation "androidx.compose.material:material:1.1.1"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "io.coil-kt:coil-compose:$compose_coil"
 
